--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "react-router-dom": "^4.2.2",
     "yarn": "^1.3.2"
   },
   "devDependencies": {},
