--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
