--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "apeman-react-clock": "^3.0.3",
     "axios": "^0.16.2",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "react": "^16.0.0",
+    "react-clock": "^2.2.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
