--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.0",
     "react-clock": "^2.2.0",
     "react-dom": "^16.0.0",
+    "react-jsonschema-form": "^1.0.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
     "react-week-calendar": "^0.1.1",
